parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> start
Rule 1     start -> bloc
Rule 2     bloc -> bloc statement
Rule 3     bloc -> statement
Rule 4     statement -> NAME EQUALS expression SEMI
Rule 5     statement -> NAME EQUALS expression
Rule 6     statement -> WHILE expression RACC bloc LACC
Rule 7     statement -> FOR LPAREN statement TO NUMBER COMMA statement RPAREN RACC bloc LACC
Rule 8     statement -> COMMENTS
Rule 9     statement -> IF expression THEN statement
Rule 10    statement -> IF expression THEN RACC bloc LACC
Rule 11    statement -> IF expression THEN RACC bloc LACC ELSEIF expression THEN RACC bloc LACC ELSE RACC bloc LACC
Rule 12    statement -> IF expression THEN RACC bloc LACC ELSE RACC bloc LACC
Rule 13    statement -> PRINT LPAREN expression RPAREN SEMI
Rule 14    statement -> PRINT STRING SEMI
Rule 15    params -> NAME
Rule 16    params -> NAME COMMA params
Rule 17    statement -> RETURN expression SEMI
Rule 18    statement -> FUNCTION NAME LPAREN RPAREN START bloc END
Rule 19    statement -> FUNCTION NAME LPAREN params RPAREN START bloc END
Rule 20    statement -> NAME LPAREN RPAREN SEMI
Rule 21    statement -> NAME LPAREN param_call RPAREN SEMI
Rule 22    param_call -> expression
Rule 23    param_call -> expression COMMA param_call
Rule 24    expression -> expression PLUS expression
Rule 25    expression -> expression MINUS expression
Rule 26    expression -> expression TIMES expression
Rule 27    expression -> expression DIVIDE expression
Rule 28    expression -> expression or expression
Rule 29    expression -> expression and expression
Rule 30    expression -> expression SUP expression
Rule 31    expression -> expression INFF expression
Rule 32    expression -> expression ISEQUAL expression
Rule 33    expression -> expression NOTEQUAL expression
Rule 34    expression -> expression ET expression
Rule 35    expression -> expression OU expression
Rule 36    statement -> NAME INCR SEMI
Rule 37    statement -> NAME DECR SEMI
Rule 38    statement -> NAME INCR
Rule 39    statement -> NAME DECR
Rule 40    statement -> NAME PLUSEQ NUMBER SEMI
Rule 41    statement -> NAME MINEQ NUMBER SEMI
Rule 42    statement -> NAME PLUSEQ NUMBER
Rule 43    statement -> NAME MINEQ NUMBER
Rule 44    expression -> MINUS expression
Rule 45    expression -> LPAREN expression RPAREN
Rule 46    expression -> NUMBER
Rule 47    expression -> NAME

Terminals, with rules where they appear

COMMA                : 7 16 23
COMMENT              : 
COMMENTS             : 8
DECR                 : 37 39
DIVIDE               : 27
ELSE                 : 11 12
ELSEIF               : 11
END                  : 18 19
EQUALS               : 4 5
ET                   : 34
FOR                  : 7
FUNCTION             : 18 19
IF                   : 9 10 11 12
INCR                 : 36 38
INFF                 : 31
ISEQUAL              : 32
LACC                 : 6 7 10 11 11 11 12 12
LPAREN               : 7 13 18 19 20 21 45
MINEQ                : 41 43
MINUS                : 25 44
NAME                 : 4 5 15 16 18 19 20 21 36 37 38 39 40 41 42 43 47
NOTEQUAL             : 33
NUMBER               : 7 40 41 42 43 46
OU                   : 35
PLUS                 : 24
PLUSEQ               : 40 42
PRINT                : 13 14
RACC                 : 6 7 10 11 11 11 12 12
RETURN               : 17
RPAREN               : 7 13 18 19 20 21 45
SEMI                 : 4 13 14 17 20 21 36 37 40 41
START                : 18 19
STRING               : 14
SUP                  : 30
THEN                 : 9 10 11 11 12
TIMES                : 26
TO                   : 7
WHILE                : 6
and                  : 29
error                : 
or                   : 28

Nonterminals, with rules where they appear

bloc                 : 1 2 6 7 10 11 11 11 12 12 18 19
expression           : 4 5 6 9 10 11 11 12 13 17 22 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 44 45
param_call           : 21 23
params               : 16 19
start                : 0
statement            : 2 3 7 7 9

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . bloc
    (2) bloc -> . bloc statement
    (3) bloc -> . statement
    (4) statement -> . NAME EQUALS expression SEMI
    (5) statement -> . NAME EQUALS expression
    (6) statement -> . WHILE expression RACC bloc LACC
    (7) statement -> . FOR LPAREN statement TO NUMBER COMMA statement RPAREN RACC bloc LACC
    (8) statement -> . COMMENTS
    (9) statement -> . IF expression THEN statement
    (10) statement -> . IF expression THEN RACC bloc LACC
    (11) statement -> . IF expression THEN RACC bloc LACC ELSEIF expression THEN RACC bloc LACC ELSE RACC bloc LACC
    (12) statement -> . IF expression THEN RACC bloc LACC ELSE RACC bloc LACC
    (13) statement -> . PRINT LPAREN expression RPAREN SEMI
    (14) statement -> . PRINT STRING SEMI
    (17) statement -> . RETURN expression SEMI
    (18) statement -> . FUNCTION NAME LPAREN RPAREN START bloc END
    (19) statement -> . FUNCTION NAME LPAREN params RPAREN START bloc END
    (20) statement -> . NAME LPAREN RPAREN SEMI
    (21) statement -> . NAME LPAREN param_call RPAREN SEMI
    (36) statement -> . NAME INCR SEMI
    (37) statement -> . NAME DECR SEMI
    (38) statement -> . NAME INCR
    (39) statement -> . NAME DECR
    (40) statement -> . NAME PLUSEQ NUMBER SEMI
    (41) statement -> . NAME MINEQ NUMBER SEMI
    (42) statement -> . NAME PLUSEQ NUMBER
    (43) statement -> . NAME MINEQ NUMBER

    NAME            shift and go to state 4
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    COMMENTS        shift and go to state 7
    IF              shift and go to state 8
    PRINT           shift and go to state 9
    RETURN          shift and go to state 10
    FUNCTION        shift and go to state 11

    start                          shift and go to state 1
    bloc                           shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> bloc .
    (2) bloc -> bloc . statement
    (4) statement -> . NAME EQUALS expression SEMI
    (5) statement -> . NAME EQUALS expression
    (6) statement -> . WHILE expression RACC bloc LACC
    (7) statement -> . FOR LPAREN statement TO NUMBER COMMA statement RPAREN RACC bloc LACC
    (8) statement -> . COMMENTS
    (9) statement -> . IF expression THEN statement
    (10) statement -> . IF expression THEN RACC bloc LACC
    (11) statement -> . IF expression THEN RACC bloc LACC ELSEIF expression THEN RACC bloc LACC ELSE RACC bloc LACC
    (12) statement -> . IF expression THEN RACC bloc LACC ELSE RACC bloc LACC
    (13) statement -> . PRINT LPAREN expression RPAREN SEMI
    (14) statement -> . PRINT STRING SEMI
    (17) statement -> . RETURN expression SEMI
    (18) statement -> . FUNCTION NAME LPAREN RPAREN START bloc END
    (19) statement -> . FUNCTION NAME LPAREN params RPAREN START bloc END
    (20) statement -> . NAME LPAREN RPAREN SEMI
    (21) statement -> . NAME LPAREN param_call RPAREN SEMI
    (36) statement -> . NAME INCR SEMI
    (37) statement -> . NAME DECR SEMI
    (38) statement -> . NAME INCR
    (39) statement -> . NAME DECR
    (40) statement -> . NAME PLUSEQ NUMBER SEMI
    (41) statement -> . NAME MINEQ NUMBER SEMI
    (42) statement -> . NAME PLUSEQ NUMBER
    (43) statement -> . NAME MINEQ NUMBER

    $end            reduce using rule 1 (start -> bloc .)
    NAME            shift and go to state 4
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    COMMENTS        shift and go to state 7
    IF              shift and go to state 8
    PRINT           shift and go to state 9
    RETURN          shift and go to state 10
    FUNCTION        shift and go to state 11

    statement                      shift and go to state 12

state 3

    (3) bloc -> statement .

    NAME            reduce using rule 3 (bloc -> statement .)
    WHILE           reduce using rule 3 (bloc -> statement .)
    FOR             reduce using rule 3 (bloc -> statement .)
    COMMENTS        reduce using rule 3 (bloc -> statement .)
    IF              reduce using rule 3 (bloc -> statement .)
    PRINT           reduce using rule 3 (bloc -> statement .)
    RETURN          reduce using rule 3 (bloc -> statement .)
    FUNCTION        reduce using rule 3 (bloc -> statement .)
    $end            reduce using rule 3 (bloc -> statement .)
    LACC            reduce using rule 3 (bloc -> statement .)
    END             reduce using rule 3 (bloc -> statement .)


state 4

    (4) statement -> NAME . EQUALS expression SEMI
    (5) statement -> NAME . EQUALS expression
    (20) statement -> NAME . LPAREN RPAREN SEMI
    (21) statement -> NAME . LPAREN param_call RPAREN SEMI
    (36) statement -> NAME . INCR SEMI
    (37) statement -> NAME . DECR SEMI
    (38) statement -> NAME . INCR
    (39) statement -> NAME . DECR
    (40) statement -> NAME . PLUSEQ NUMBER SEMI
    (41) statement -> NAME . MINEQ NUMBER SEMI
    (42) statement -> NAME . PLUSEQ NUMBER
    (43) statement -> NAME . MINEQ NUMBER

    EQUALS          shift and go to state 13
    LPAREN          shift and go to state 14
    INCR            shift and go to state 15
    DECR            shift and go to state 16
    PLUSEQ          shift and go to state 17
    MINEQ           shift and go to state 18


state 5

    (6) statement -> WHILE . expression RACC bloc LACC
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression TIMES expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression or expression
    (29) expression -> . expression and expression
    (30) expression -> . expression SUP expression
    (31) expression -> . expression INFF expression
    (32) expression -> . expression ISEQUAL expression
    (33) expression -> . expression NOTEQUAL expression
    (34) expression -> . expression ET expression
    (35) expression -> . expression OU expression
    (44) expression -> . MINUS expression
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . NUMBER
    (47) expression -> . NAME

    MINUS           shift and go to state 20
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22
    NAME            shift and go to state 23

    expression                     shift and go to state 19

state 6

    (7) statement -> FOR . LPAREN statement TO NUMBER COMMA statement RPAREN RACC bloc LACC

    LPAREN          shift and go to state 24


state 7

    (8) statement -> COMMENTS .

    NAME            reduce using rule 8 (statement -> COMMENTS .)
    WHILE           reduce using rule 8 (statement -> COMMENTS .)
    FOR             reduce using rule 8 (statement -> COMMENTS .)
    COMMENTS        reduce using rule 8 (statement -> COMMENTS .)
    IF              reduce using rule 8 (statement -> COMMENTS .)
    PRINT           reduce using rule 8 (statement -> COMMENTS .)
    RETURN          reduce using rule 8 (statement -> COMMENTS .)
    FUNCTION        reduce using rule 8 (statement -> COMMENTS .)
    $end            reduce using rule 8 (statement -> COMMENTS .)
    TO              reduce using rule 8 (statement -> COMMENTS .)
    LACC            reduce using rule 8 (statement -> COMMENTS .)
    END             reduce using rule 8 (statement -> COMMENTS .)
    RPAREN          reduce using rule 8 (statement -> COMMENTS .)


state 8

    (9) statement -> IF . expression THEN statement
    (10) statement -> IF . expression THEN RACC bloc LACC
    (11) statement -> IF . expression THEN RACC bloc LACC ELSEIF expression THEN RACC bloc LACC ELSE RACC bloc LACC
    (12) statement -> IF . expression THEN RACC bloc LACC ELSE RACC bloc LACC
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression TIMES expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression or expression
    (29) expression -> . expression and expression
    (30) expression -> . expression SUP expression
    (31) expression -> . expression INFF expression
    (32) expression -> . expression ISEQUAL expression
    (33) expression -> . expression NOTEQUAL expression
    (34) expression -> . expression ET expression
    (35) expression -> . expression OU expression
    (44) expression -> . MINUS expression
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . NUMBER
    (47) expression -> . NAME

    MINUS           shift and go to state 20
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22
    NAME            shift and go to state 23

    expression                     shift and go to state 25

state 9

    (13) statement -> PRINT . LPAREN expression RPAREN SEMI
    (14) statement -> PRINT . STRING SEMI

    LPAREN          shift and go to state 26
    STRING          shift and go to state 27


state 10

    (17) statement -> RETURN . expression SEMI
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression TIMES expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression or expression
    (29) expression -> . expression and expression
    (30) expression -> . expression SUP expression
    (31) expression -> . expression INFF expression
    (32) expression -> . expression ISEQUAL expression
    (33) expression -> . expression NOTEQUAL expression
    (34) expression -> . expression ET expression
    (35) expression -> . expression OU expression
    (44) expression -> . MINUS expression
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . NUMBER
    (47) expression -> . NAME

    MINUS           shift and go to state 20
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22
    NAME            shift and go to state 23

    expression                     shift and go to state 28

state 11

    (18) statement -> FUNCTION . NAME LPAREN RPAREN START bloc END
    (19) statement -> FUNCTION . NAME LPAREN params RPAREN START bloc END

    NAME            shift and go to state 29


state 12

    (2) bloc -> bloc statement .

    NAME            reduce using rule 2 (bloc -> bloc statement .)
    WHILE           reduce using rule 2 (bloc -> bloc statement .)
    FOR             reduce using rule 2 (bloc -> bloc statement .)
    COMMENTS        reduce using rule 2 (bloc -> bloc statement .)
    IF              reduce using rule 2 (bloc -> bloc statement .)
    PRINT           reduce using rule 2 (bloc -> bloc statement .)
    RETURN          reduce using rule 2 (bloc -> bloc statement .)
    FUNCTION        reduce using rule 2 (bloc -> bloc statement .)
    $end            reduce using rule 2 (bloc -> bloc statement .)
    LACC            reduce using rule 2 (bloc -> bloc statement .)
    END             reduce using rule 2 (bloc -> bloc statement .)


state 13

    (4) statement -> NAME EQUALS . expression SEMI
    (5) statement -> NAME EQUALS . expression
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression TIMES expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression or expression
    (29) expression -> . expression and expression
    (30) expression -> . expression SUP expression
    (31) expression -> . expression INFF expression
    (32) expression -> . expression ISEQUAL expression
    (33) expression -> . expression NOTEQUAL expression
    (34) expression -> . expression ET expression
    (35) expression -> . expression OU expression
    (44) expression -> . MINUS expression
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . NUMBER
    (47) expression -> . NAME

    MINUS           shift and go to state 20
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22
    NAME            shift and go to state 23

    expression                     shift and go to state 30

state 14

    (20) statement -> NAME LPAREN . RPAREN SEMI
    (21) statement -> NAME LPAREN . param_call RPAREN SEMI
    (22) param_call -> . expression
    (23) param_call -> . expression COMMA param_call
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression TIMES expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression or expression
    (29) expression -> . expression and expression
    (30) expression -> . expression SUP expression
    (31) expression -> . expression INFF expression
    (32) expression -> . expression ISEQUAL expression
    (33) expression -> . expression NOTEQUAL expression
    (34) expression -> . expression ET expression
    (35) expression -> . expression OU expression
    (44) expression -> . MINUS expression
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . NUMBER
    (47) expression -> . NAME

    RPAREN          shift and go to state 31
    MINUS           shift and go to state 20
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22
    NAME            shift and go to state 23

    param_call                     shift and go to state 32
    expression                     shift and go to state 33

state 15

    (36) statement -> NAME INCR . SEMI
    (38) statement -> NAME INCR .

    SEMI            shift and go to state 34
    NAME            reduce using rule 38 (statement -> NAME INCR .)
    WHILE           reduce using rule 38 (statement -> NAME INCR .)
    FOR             reduce using rule 38 (statement -> NAME INCR .)
    COMMENTS        reduce using rule 38 (statement -> NAME INCR .)
    IF              reduce using rule 38 (statement -> NAME INCR .)
    PRINT           reduce using rule 38 (statement -> NAME INCR .)
    RETURN          reduce using rule 38 (statement -> NAME INCR .)
    FUNCTION        reduce using rule 38 (statement -> NAME INCR .)
    $end            reduce using rule 38 (statement -> NAME INCR .)
    TO              reduce using rule 38 (statement -> NAME INCR .)
    LACC            reduce using rule 38 (statement -> NAME INCR .)
    END             reduce using rule 38 (statement -> NAME INCR .)
    RPAREN          reduce using rule 38 (statement -> NAME INCR .)


state 16

    (37) statement -> NAME DECR . SEMI
    (39) statement -> NAME DECR .

    SEMI            shift and go to state 35
    NAME            reduce using rule 39 (statement -> NAME DECR .)
    WHILE           reduce using rule 39 (statement -> NAME DECR .)
    FOR             reduce using rule 39 (statement -> NAME DECR .)
    COMMENTS        reduce using rule 39 (statement -> NAME DECR .)
    IF              reduce using rule 39 (statement -> NAME DECR .)
    PRINT           reduce using rule 39 (statement -> NAME DECR .)
    RETURN          reduce using rule 39 (statement -> NAME DECR .)
    FUNCTION        reduce using rule 39 (statement -> NAME DECR .)
    $end            reduce using rule 39 (statement -> NAME DECR .)
    TO              reduce using rule 39 (statement -> NAME DECR .)
    LACC            reduce using rule 39 (statement -> NAME DECR .)
    END             reduce using rule 39 (statement -> NAME DECR .)
    RPAREN          reduce using rule 39 (statement -> NAME DECR .)


state 17

    (40) statement -> NAME PLUSEQ . NUMBER SEMI
    (42) statement -> NAME PLUSEQ . NUMBER

    NUMBER          shift and go to state 36


state 18

    (41) statement -> NAME MINEQ . NUMBER SEMI
    (43) statement -> NAME MINEQ . NUMBER

    NUMBER          shift and go to state 37


state 19

    (6) statement -> WHILE expression . RACC bloc LACC
    (24) expression -> expression . PLUS expression
    (25) expression -> expression . MINUS expression
    (26) expression -> expression . TIMES expression
    (27) expression -> expression . DIVIDE expression
    (28) expression -> expression . or expression
    (29) expression -> expression . and expression
    (30) expression -> expression . SUP expression
    (31) expression -> expression . INFF expression
    (32) expression -> expression . ISEQUAL expression
    (33) expression -> expression . NOTEQUAL expression
    (34) expression -> expression . ET expression
    (35) expression -> expression . OU expression

    RACC            shift and go to state 38
    PLUS            shift and go to state 39
    MINUS           shift and go to state 40
    TIMES           shift and go to state 41
    DIVIDE          shift and go to state 42
    or              shift and go to state 43
    and             shift and go to state 44
    SUP             shift and go to state 45
    INFF            shift and go to state 46
    ISEQUAL         shift and go to state 47
    NOTEQUAL        shift and go to state 48
    ET              shift and go to state 49
    OU              shift and go to state 50


state 20

    (44) expression -> MINUS . expression
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression TIMES expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression or expression
    (29) expression -> . expression and expression
    (30) expression -> . expression SUP expression
    (31) expression -> . expression INFF expression
    (32) expression -> . expression ISEQUAL expression
    (33) expression -> . expression NOTEQUAL expression
    (34) expression -> . expression ET expression
    (35) expression -> . expression OU expression
    (44) expression -> . MINUS expression
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . NUMBER
    (47) expression -> . NAME
